--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         function redirectToCV() {
             // Ganti URL ini dengan halaman CV Anda
             alert("Login berhasil! Mengalihkan ke halaman CV...");
-            window.location.href = "CV_FARHAN.html";
+            window.location.href = "https://github.com/FarhansPage/Farhan-s-CV/blob/main/CV_FARHAN.html";
         }
         
         // Validasi form login
