--- a/CV_FARHAN.html
+++ b/CV_FARHAN.html
@@ -113,7 +113,7 @@
         <div class="section">
             <div class="section-title">TENTANG SAYA</div>
             <div class="item">
-                Saya adalah mahasiswa yang sangat menyukai seni, terutama desain grafis. Saya terus mengembangkan keahlian saya dalam berbagai program desain seperti Adobe Photoshop dan Illustrator dengan kreativitas dan ketelitian visual. Saya juga aktif mengikuti tren terbaru dalam industri desain grafis dan secara konsisten menambah portofolio saya melalui proyek kreatif.  Saya bersemangat untuk memulai karir profesional sebagai desainer grafis yang dapat membuat solusi visual yang kreatif dan efisien. 
+                Saya adalah Mahasiswa aktif Telkom University Kampus Jakarta yang sangat menyukai seni, terutama desain grafis. Saya terus mengembangkan keahlian saya dalam berbagai program desain seperti Adobe Photoshop dan Illustrator dengan kreativitas dan ketelitian visual. Saya juga aktif mengikuti tren terbaru dalam industri desain grafis dan secara konsisten menambah portofolio saya melalui proyek kreatif.  Saya bersemangat untuk memulai karir profesional sebagai desainer grafis yang dapat membuat solusi visual yang kreatif dan efisien. 
         </div>
         
         <!-- Pendidikan -->
